3 July 2025: Wouter
	- Fix #1300: Is 'sock-queue-timeout' a linux only feature.
	- For #1300: implement sock-queue-timeout for FreeBSD as well.
	- Fix layout of comm_point_udp_ancil_callback.

2 July 2025: Wouter
	- Merge #1299: Fix typos.
	- Generate ltmain.sh and configure again.

25 June 2025: Yorgos
	- Fix #1247: forward-first: ssl handshake failed on root nameservers.
	- For #1247, turn off fetch-policy for delegation when looking into
	  parent side name servers that may not update the addresses and hit
	  NXNS limits.
	- For #1247, replay test (added tcp_transport to
	  outnet_serviced_query).

20 June 2025: Yorgos
	- Fix #1293: EDE 6 is attached to insecure cached answers when client
	  sends the CD bit.

19 June 2025: Wouter
	- Fix #1296: DNS over QUIC depends on a very outdated version of
	  ngtcp2. Fixed so it works with ngtcp2 1.13.0 and OpenSSL 3.5.0.
	- Merge #1297: edns-subnet: fix NULL_AFTER_DEREF on subnetmod.
	- Fix rrset cache create allocation failure case.

17 June 2025: Yorgos
	- Fix for consistent use of local zone CNAME alias for configured auth
	  zones. Now it also applies to downstream configured auth zones.

16 June 2025: Wouter
	- Fix to check control-interface addresses in unbound-checkconf.
	- Fix #1295: Windows 32-bit binaries download seems to be missing dll
	  dependency.

12 June 2025: Wouter
	- Fix header return value description for skip_pkt_rrs and
	  parse_edns_from_query_pkt.

11 June 2025: Wouter
	- Fix bitwise operators in conditional expressions with parentheses.
	- Fix conditional expressions with parentheses for bitwise and.

5 June 2025: Wouter
	- Fix unbound-anchor certificate file read for line ends and end of
	  file.
	- Fix comment for the dname_remove_label_limit_len function.
	- iana portlist updated.

3 June 2025: Yorgos
	- Small manpage corrections for the 'disable-dnssec-lame-check' option.

21 May 2025: Wouter
	- Fix #1288: [FR] Improve fuzzing of unbound by adapting the netbound
	  program.
